chore(login): implementando layout e validators

--- a/src/app/@shared/loader/loader.component.html
+++ b/src/app/@shared/loader/loader.component.html
@@ -1,4 +1,22 @@
-<div [hidden]="!isLoading">
+<!-- <div [hidden]="!isLoading">
   <mat-progress-spinner mode="indeterminate" [strokeWidth]="2" [diameter]="32 * size"></mat-progress-spinner>
   <span class="message">{{ message }}</span>
+</div> -->
+
+<div class="loading">
+  <svg id="Group_8" data-name="Group 8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="100" viewBox="0 0 69.987 70">
+    <defs>
+      <clipPath id="clip-path">
+        <path id="obj" data-name="Clip 2" d="M0,0H69.987V63.61H0Z" transform="translate(0 0.229)" fill="none"/>
+      </clipPath>
+    </defs>
+    <g id="Group_3" data-name="Group 3" transform="translate(0 6)">
+      <!-- <path id="obj" data-name="Clip 2" d="M0,0H69.987V63.61H0Z" transform="translate(0 0.229)" fill="none"/> -->
+      <g id="Group_3-2" data-name="Group 3" clip-path="url(#clip-path)">
+        <path id="Fill_1" data-name="Fill 1" d="M15.264,0a34.843,34.843,0,0,0,28.8,62.415,34.877,34.877,0,0,0,25.927-32.5A33.007,33.007,0,1,1,15.264,0" transform="translate(0 0.229)" fill="#388af7"/>
+      </g>
+    </g>
+    <path id="obj" data-name="Fill 4" d="M46.132,54A29.551,29.551,0,1,0,0,28.6,27.856,27.856,0,1,1,46.132,54" transform="translate(7)" fill="#7bdefb"/>
+    <path id="obj" data-name="Fill 6" d="M21.2,28.987v7.176c0,7.172-3.319,13.147-7.4,13.147-4.008,0-7.324-5.975-7.324-13.147v-8.87c2.39-.6,4.241-3.389,4.241-6.772,0-3.786-2.39-6.874-5.32-6.874S0,16.735,0,20.521C0,23.9,1.851,26.7,4.319,27.293v8.87C4.319,44.926,8.557,52,13.8,52s9.563-7.074,9.563-15.837V28.987c2.156-.4,4.316-1.893,6.241-4.482a1.772,1.772,0,0,0,.31-1.4A28.208,28.208,0,0,0,34,9.362c0-6.475-2.39-7.17-6.4-8.269A1.6,1.6,0,0,0,26.213,0a1.775,1.775,0,0,0-1.541,1.89,1.682,1.682,0,0,0,1.541,1.8,1.073,1.073,0,0,0,.925-.4c3.934,1.1,5.011,1.394,5.011,6.077a25.566,25.566,0,0,1-3.7,12.256,1.154,1.154,0,0,0-1,.6C26.29,23.806,24.441,25.7,22.281,25.7s-3.931-1.893-5.09-3.486a1.246,1.246,0,0,0-1-.6,25.547,25.547,0,0,1-3.7-12.256c0-4.683,1-4.981,4.931-6.077a1.28,1.28,0,0,0,.927.4,1.682,1.682,0,0,0,1.541-1.8A1.776,1.776,0,0,0,18.35,0a1.7,1.7,0,0,0-1.39,1.093c-4.009,1.1-6.4,1.794-6.4,8.269A27.918,27.918,0,0,0,14.65,23.109a2.2,2.2,0,0,0,.384,1.4c1.851,2.588,4.009,4.083,6.17,4.482" transform="translate(15 18)" fill="#388af7"/>
+  </svg>
 </div>
