--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,50 +1,59 @@
-<div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
-  <div>
-    <h1 fxLayoutAlign="center" translate>TCC</h1>
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
-      <h4 class="version">v{{ version }}</h4>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-7 col-sm-12 d-flex justify-content-center align-items-center">
+      <img src="../../assets/login/img-left-login.svg" alt="Person Login" class="img-responsive">
     </div>
-  </div>
-  <div class="login-container" fxLayout="row" fxLayoutAlign="center">
-    <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="login-box">
-      <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
-        <div class="login-error" [hidden]="!error || isLoading" translate>Username or password incorrect.</div>
-        <br />
-        <div class="login-fields" fxLayout="column">
-          <mat-form-field [hideRequiredMarker]="true">
-            <input
-              type="text"
-              matInput
-              formControlName="username"
-              autocomplete="username"
-              [placeholder]="'Username' | translate"
-              required
-            />
-            <mat-error *ngIf="loginForm.controls.username.invalid && loginForm.controls.username.touched">
-              <span translate>Username is required</span>
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field [hideRequiredMarker]="true">
-            <input
-              type="password"
-              matInput
-              formControlName="password"
-              autocomplete="current-password"
-              [placeholder]="'Password' | translate"
-              required
-            />
-            <mat-error *ngIf="loginForm.controls.password.invalid && loginForm.controls.password.touched">
-              <span translate>Password is required</span>
-            </mat-error>
-          </mat-form-field>
-          <mat-slide-toggle color="primary" formControlName="remember" translate>Remember me</mat-slide-toggle>
+    <div class="col-md-5 col-sm-12 d-flex justify-content-center align-items-center bg-form">
+      <div class="box-form shadow">
+        <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
+          <div class="login-error" [hidden]="!error || isLoading">Username or password incorrect.</div>
           <br />
-          <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
-            <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
-            <span translate>Login</span>
-          </button>
-        </div>
-      </form>
-    </mat-card>
+          <h1 class="text-center mb-3 mt-0 title">Login</h1>
+          <div class="login-fields px-3">
+            <mat-form-field appearance="outline">
+              <mat-label>E-mail</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu e-mail"
+                autocomplete="off"
+                formControlName="username">
+                <mat-error>
+                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field [hideRequiredMarker]="true" appearance="outline">
+              <mat-label>Senha</mat-label>
+              <input
+                [type]="hide ? 'password' : 'text'"
+                matInput
+                formControlName="password"
+                autocomplete="current-password"
+                placeholder="Digite sua senha"
+                required
+              />
+              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" type="button">
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+                <mat-error>
+                  <app-error-control-message [control]="loginForm.controls.password" label="Senha"></app-error-control-message>
+                </mat-error>
+            </mat-form-field>
+            <div class="row">
+              <div class="col-6">
+                <mat-slide-toggle color="primary" formControlName="remember" class="remeber">Lembrar usuário</mat-slide-toggle>
+              </div>
+              <div class="col-6 d-flex justify-content-end pe-0">
+                  <a class="reset-password">Esqueceu sua senha?</a>
+              </div>
+            </div>
+            <br />
+            <div class="w-100 d-flex justify-content-center">
+              <button class="btn btn-primary-login p-2"  [disabled]="loginForm.invalid || isLoading">Entrar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
