--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -1,9 +1,10 @@
 @import "src/theme/theme-variables";
+@import '../../theme/general';
 
 :host {
   display: flex;
   flex: 1;
-  background-color: #f5f5f5;
+  background-color: #FFFFFF;
 }
 
 .inline-loader {
@@ -25,4 +26,38 @@
 
 .login-error {
   color: mat-color($app-warn);
+}
+
+.bg-form {
+  background: url(../../assets/login/bg-form-login.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.box-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 500px;
+  height: 470px;
+  border-radius: 28px;
+  top: 80px;
+  position: relative;
+}
+
+.title {
+  color: #404040;
+  font-size: 40px;
+}
+
+.remeber {
+  color:#7C7C7C;
+  font-size:  var(--f_14);
+  font-weight: 600;
+}
+
+.reset-password {
+  color: #197BBD;
+  font-size:var(--f_14);
+  font-weight: 600;
 }
