--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -10,6 +10,7 @@
 
 @import "~@angular/material/theming";
 @import "./general";
+@import "./buttons";
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
