--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -9,8 +9,10 @@
 // for more insight about Angular Material theming.
 
 @import "~@angular/material/theming";
+@import "./root";
 @import "./general";
 @import "./buttons";
+@import "./table";
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
