--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -1,17 +1,16 @@
 <div fxFlex>
   <mat-sidenav-container fxFill>
-    <mat-sidenav
+    <mat-sidenav class="shadow-sm"
       #sidenav
       [mode]="isMobile ? 'over' : 'side'"
       [opened]="!isMobile"
       [disableClose]="!isMobile"
       ngClass.gt-sm="has-border"
     >
-      <mat-toolbar color="primary">
-        <!-- <img src="../../assets/logo.png" alt="" height="50"> -->
-        <span>Tcc Web</span>
-        <div fxFlex></div>
-        <div>
+      <mat-toolbar>
+        <img src="../../assets/logo-svg.svg" alt="Logo Menu">
+        <span class="name-app">IHealth</span>
+        <!-- <div>
           <button mat-icon-button [matMenuTriggerFor]="userMenu">
             <mat-icon>person</mat-icon>
           </button>
@@ -24,28 +23,44 @@
             </mat-list>
             <button mat-menu-item (click)="logout()">Sair</button>
           </mat-menu>
-        </div>
+        </div> -->
       </mat-toolbar>
       <nav>
         <mat-list>
-          <mat-divider></mat-divider>
           <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-            <span>Início</span>
+            <div class="icon-visao icon-wh"></div>
+            <span>Visão geral</span>
           </a>
-          <mat-divider></mat-divider>
+          <a mat-list-item routerLink="/pacientes" routerLinkActive="active" (click)="isMobile && sidenav.close()">
+            <span>Pacientes</span>
+          </a>
           <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <span>Temp</span>
           </a>
-          <mat-divider></mat-divider>
+          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+            <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+              {{node.name}}
+            </mat-tree-node>
+            <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding class="d-flex justify-content-between ps-3">
+              {{node.name}}
+              <button mat-icon-button matTreeNodeToggle
+                      [attr.aria-label]="'Toggle ' + node.name">
+                <mat-icon class="mat-icon-rtl-mirror">
+                  {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                </mat-icon>
+              </button>
+            </mat-tree-node>
+          </mat-tree>
         </mat-list>
       </nav>
     </mat-sidenav>
-    <mat-sidenav-content>
-      <mat-toolbar color="primary" class="mat-elevation-z6">
+    <mat-sidenav-content style="margin-left: 312px;">
+      <mat-toolbar  class="bg-header">
         <button class="menu-button" mat-icon-button (click)="sidenav.toggle()" fxHide.gt-sm>
           <mat-icon>menu</mat-icon>
         </button>
-        <span>{{ title }}</span>
+        <h1 class="title-page">{{ title }}</h1>
+        <!-- <span class="subtitle">{{ subtitle }}</span> -->
       </mat-toolbar>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
