--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -1,11 +1,14 @@
 :host {
   display: flex;
   flex: 1;
+  --font-title-color: #404040;
+  --font-subtitle-color: #B5B5C3;
+  --font-size-title: 43px;
 }
 
 .mat-sidenav {
-  min-width: 270px;
-  max-width: 28%;
+  min-width: 315px;
+  max-width: 100%;
 }
 
 .has-border {
@@ -16,14 +19,87 @@
   padding-top: 0;
 }
 
-.mat-list-item {
+.mat-list-item, .mat-tree-node {
   text-decoration: none;
+  color: var(--tcc-gray);
+  font-weight: 500;
+  font-size: var(--f_16);
+  cursor: pointer;
 
   &:hover {
-    background: rgba(0, 0, 0, 0.05);
+    transition: 200ms;
+    color: var(--tcc-active-menu);
+    background: rgba(240, 247, 255, 1);
   }
 }
 
 .menu-button {
   margin-right: 1rem;
+}
+
+.active {
+  color: var(--tcc-active-menu);
+  font-size: var(--f_16);
+  font-weight: 600;
+  background-color: #F0F7FF;
+
+  .icon-visao {
+    background: url(../../assets/menu-nav/icon-visao-blue.svg);
+  }
+  &:hover {
+    background-color: #F0F7FF;
+    transition: 2000ms;
+  }
+
+}
+
+.icon-visao {
+  background: url(../../assets/menu-nav/icon-visao.svg);
+  background-size: cover;
+}
+
+.icon-wh {
+  width: 20px;
+  height: 20px;
+  margin-right: 1.5rem;
+}
+
+.mat-toolbar{
+  background-color: #FFFFFF;
+}
+
+.mat-toolbar-row, .mat-toolbar-single-row {
+  height: 130px;
+  padding: 0 40px;
+}
+
+.name-app {
+  color: #3B4349;
+  font-weight: 600;
+  font-size: 28px;
+  padding-left: 13px;
+}
+
+.mat-list-base {
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 4px;
+
+  .mat-list-item {
+    border-radius: 4px;
+  }
+}
+
+.title-page {
+  color: var(--font-title-color);
+  font-size: var(--font-size-title);
+}
+
+.subtitle {
+  color: var(--font-subtitle-color);
+  font-size: var(--f_16);
+}
+
+.bg-header {
+  background: #fafafa;
 }
