--- a/src/theme/_buttons.scss
+++ b/src/theme/_buttons.scss
@@ -8,3 +8,9 @@
   width: 90%;
   border-radius: 90px !important;
 }
+
+.btn-iniciar-consulta {
+  background-color: #C9F7F5;
+  color: #1BC5BD;
+  font-weight: 400;
+}
