--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -1,4 +1,6 @@
 :root {
+  --tcc-bg-menu: #f1f3f6;
+  --tcc-bg-body: #fafafa;
   --tcc-blue: #0d6efd;
   --tcc-indigo: #6610f2;
   --tcc-purple: #6f42c1;
