--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -13,6 +13,7 @@
 @import "./general";
 @import "./buttons";
 @import "./table";
+@import "./form";
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
