--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -39,7 +39,7 @@
                   <app-error-control-message [control]="loginForm.controls.password" label="Senha"></app-error-control-message>
                 </mat-error>
             </mat-form-field>
-            <div class="row">
+            <div class="row mt-2">
               <div class="col-6">
                 <mat-slide-toggle color="primary" formControlName="remember" class="remeber">Lembrar usuário</mat-slide-toggle>
               </div>
@@ -49,7 +49,7 @@
             </div>
             <br />
             <div class="w-100 d-flex justify-content-center">
-              <button class="btn btn-primary-login p-2"  [disabled]="loginForm.invalid || isLoading">Entrar</button>
+              <button class="btn btn-primary-tcc p-2"  [disabled]="loginForm.invalid || isLoading">entrar</button>
             </div>
           </div>
         </form>
