--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -6,8 +6,14 @@
   --font-size-title: 43px;
 }
 
+.mat-drawer,
+.mat-toolbar,
+.mat-tree {
+  background-color: var(--tcc-bg-menu);
+}
+
 .mat-sidenav {
-  min-width: 315px;
+  min-width: 280px;
   max-width: 100%;
 }
 
@@ -41,16 +47,22 @@
   color: var(--tcc-active-menu);
   font-size: var(--f_16);
   font-weight: 600;
-  background-color: #F0F7FF;
-
+  background-color: #FFFFFF;
+  border: 1px solid #e1e4e7;
+  border-left: none !important;
+  border-right: none !important;
   .icon-visao {
     background: url(../../assets/menu-nav/icon-visao-blue.svg);
   }
   &:hover {
     background-color: #F0F7FF;
-    transition: 2000ms;
+    transition: 200ms;
   }
 
+}
+
+a.active {
+  border-right: 4px solid;
 }
 
 .icon-visao {
@@ -64,13 +76,10 @@
   margin-right: 1.5rem;
 }
 
-.mat-toolbar{
-  background-color: #FFFFFF;
-}
 
 .mat-toolbar-row, .mat-toolbar-single-row {
   height: 130px;
-  padding: 0 40px;
+  padding: 0 10px;
 }
 
 .name-app {
@@ -80,14 +89,12 @@
   padding-left: 13px;
 }
 
-.mat-list-base {
-  padding-left: 40px;
-  padding-right: 40px;
-  border-radius: 4px;
+.mat-list-base .mat-list-item, .mat-tree-node {
+  height: 53px;
+}
 
-  .mat-list-item {
-    border-radius: 4px;
-  }
+.bg-header {
+  background: var(--tcc-bg-body);
 }
 
 .title-page {
@@ -98,8 +105,4 @@
 .subtitle {
   color: var(--font-subtitle-color);
   font-size: var(--f_16);
-}
-
-.bg-header {
-  background: #fafafa;
 }
