chore(home): implementando componente de Estatísticas Gerais

--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -17,20 +17,23 @@
       <!-- Cards rigth-->
       <div class="col-md-6 col-sm-12">
         <div class="row">
-          <div class="col-4">
-            <app-card-content>
+          <div class="col-md-4 col-sm-12 mt-sm-2 mt-md-0">
+            <app-card-content cardClass="border-radius-28">
               <h1>CARD CONTENT</h1>
             </app-card-content>
           </div>
-          <div class="col-4">
-            <app-card-content>
+          <div class="col-md-4 col-sm-12 my-sm-2 my-md-0">
+            <app-card-content cardClass="border-radius-28">
               <h1>CARD CONTENT</h1>
             </app-card-content>
           </div>
-          <div class="col-4">
-            <app-card-content>
+          <div class="col-md-4 col-sm-12 ">
+            <app-card-content cardClass="border-radius-28">
               <h1>CARD CONTENT</h1>
             </app-card-content>
+          </div>
+          <div class="col-12 mt-3">
+            <app-estatisticas-gerais></app-estatisticas-gerais>
           </div>
         </div>
       </div>
