--- a/src/app/@shared/card-content/card-content.component.html
+++ b/src/app/@shared/card-content/card-content.component.html
@@ -1,6 +1,6 @@
-<mat-card>
+<mat-card [ngClass]="cardClass">
   <mat-card-content>
-    <div class="card-content" [ngClass]="cardClass">
+    <div class="card-content" >
       <ng-content></ng-content>
     </div>
   </mat-card-content>
