--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -34,4 +34,7 @@
   --f_12: 12px;
   --f_14: 14px;
   --f_16: 16px;
+  --tcc-bg-success-progress: rgb(32, 157, 67);
+  --tcc-bg-info-progress: #70A6E8;
+  --tcc-bg-warning-progress: rgb(252, 174, 115);
 }
