--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -11,6 +11,7 @@
 @import "~@angular/material/theming";
 @import "./root";
 @import "./general";
+@import "./responsive";
 @import "./buttons";
 @import "./table";
 @import "./form";
