--- a/src/theme/_form.scss
+++ b/src/theme/_form.scss
@@ -23,4 +23,12 @@
   .mat-form-field-appearance-outline .mat-form-field-wrapper {
     margin: .6em 0 !important;
   }
+
+  .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: .8em 0 .8em 0;
+  }
+
+  .mat-form-field-infix {
+    border-top: 0.5em solid transparent;
+  }
 }
