--- a/src/theme/_general.scss
+++ b/src/theme/_general.scss
@@ -2202,3 +2202,76 @@ button:not(:disabled),
   position: -webkit-sticky !important;
   position: sticky !important;
 }
+
+// PROGRESSBAR
+
+progress {
+  vertical-align: baseline;
+}
+
+@-webkit-keyframes progress-bar-stripes {
+  0% {
+    background-position-x: 1rem;
+  }
+}
+
+@keyframes progress-bar-stripes {
+  0% {
+    background-position-x: 1rem;
+  }
+}
+
+.progress {
+  display: flex;
+  height: .65rem;
+  overflow: hidden;
+  font-size: 0.75rem;
+  background-color: #F1F1F1;
+  border-radius: 0.8rem;
+}
+
+.progress-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #0d6efd;
+  transition: width 0.6s ease;
+}
+@media (prefers-reduced-motion: reduce) {
+  .progress-bar {
+    transition: none;
+  }
+}
+
+.progress-bar-striped {
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-size: 1rem 1rem;
+}
+
+.progress-bar-animated {
+  -webkit-animation: 1s linear infinite progress-bar-stripes;
+  animation: 1s linear infinite progress-bar-stripes;
+}
+@media (prefers-reduced-motion: reduce) {
+  .progress-bar-animated {
+    -webkit-animation: none;
+    animation: none;
+  }
+}
+
+.bg-primary-progress {
+  background-color: var(--tcc-bg-info-progress) !important;
+}
+
+.bg-secondary-progress {
+  background-color: var(--tcc-bg-warning-progress) !important;
+}
+
+.bg-success-progress {
+  background-color: var(--tcc-bg-success-progress) !important;
+}
+
