chore(home e config): implementando componente de dados gerais/identificação e configurando Feather Icons

--- a/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
+++ b/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
@@ -5,7 +5,9 @@
 </div>
 <div class="row d-flex align-items-center my-1">
   <div class="col-2 pe-0">
-    <div class="bg-icon-progress-first bg-format-icon shadow-sm"></div>
+    <div class="bg-icon-progress-first bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
+      <i class="feather icon-activity"></i>
+    </div>
   </div>
   <div class="col-8 ps-0">
     <div class="progress shadow-sm">
@@ -19,7 +21,9 @@
 </div>
 <div class="row d-flex align-items-center my-1">
   <div class="col-2 pe-0">
-    <div class="bg-icon-progress-second bg-format-icon shadow-sm"></div>
+    <div class="bg-icon-progress-second bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
+      <i class="feather icon-activity"></i>
+    </div>
   </div>
   <div class="col-8 ps-0">
     <div class="progress shadow-sm">
@@ -33,7 +37,9 @@
 </div>
 <div class="row d-flex align-items-center my-1">
   <div class="col-2 pe-0">
-    <div class="bg-icon-progress-third bg-format-icon shadow-sm"></div>
+    <div class="bg-icon-progress-third bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
+      <i class="feather icon-activity"></i>
+    </div>
   </div>
   <div class="col-8 ps-0">
     <div class="progress">
