--- a/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.scss
+++ b/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.scss
@@ -1,13 +1,17 @@
 .bg-icon-progress-first {
   background-color: #FFEADA;
+  color: #F8964C;
+
 }
 
 .bg-icon-progress-second {
   background-color: #DDF9E4;
+  color: #22A447;
 }
 
 .bg-icon-progress-third {
   background-color: #E4F0FF;
+  color: #70A6E8;
 }
 
 .bg-format-icon {
