--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -6,7 +6,18 @@
         <div class="row">
           <div class="col-12">
             <app-card-content>
-              <h1>CARD CONTENT</h1>
+              <div class="row">
+                <div class="col-12">
+                  <h3 class="m-0 mb-3">Dados gerais</h3>
+                </div>
+                <div class="col-6">
+                  <app-identificacao-profissional></app-identificacao-profissional>
+                </div>
+                <!-- <div class="col-auto p-0 line"></div> -->
+                <div class="col-6">
+                 <app-dados-gerais-medico></app-dados-gerais-medico>
+                </div>
+              </div>
             </app-card-content>
           </div>
           <div class="col-12 mt-3">
