--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,9 @@
 // Theme variables, must be included before the libraries to allow overriding defaults
 @import "theme/theme-variables";
 
+// Icon Font - Feather Icons
+@import "assets/fonts/feather/iconfont";
+
 // 3rd party libraries
 @import "~material-design-icons-iconfont/src/material-design-icons";
 
