--- a/src/app/@modules/home/components/table-pacientes-home/table-pacientes-home.component.html
+++ b/src/app/@modules/home/components/table-pacientes-home/table-pacientes-home.component.html
@@ -1,31 +1,42 @@
 <app-card-content>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
+  <h3 class="mb-0 mt-2 ps-1">Usuários recentes</h3>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Nome</th>
+          <th scope="col">Tipo</th> <!-- visão funcionário o tipo corresponde a Paciente ou Médico-->
+          <th scope="col">Data</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Alexandro Alves</td>
+          <td>
+            <span>Médico</span>
+          </td>
+          <td>
+            <span>{{ date | date: 'shortDate' }}</span>
+          </td>
+          <td>
+            <span class="bold">Ativo</span>
+          </td>
+        </tr>
+        <tr>
+          <td>João Pedro</td>
+          <td>
+            <span>Paciente</span>
+          </td>
+          <td>
+            <span>@mdo</span>
+          </td>
+          <td>
+            <span class="bold">Ativo</span>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
 </app-card-content>
