--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -29,6 +29,7 @@
   --tcc-text-color-cinza: #B5B5C3;
   --tcc-text-color-title: #464E5F;
   --tcc-font-sans-serif: 'Roboto', sans-serif;
+  --tcc-font-lato: 'Lato', sans-serif;;
   --tcc-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --tcc-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --f_12: 12px;
