chore(home e config): ajustes na Home e configuração SweetAlert2 e config intercptor de error

--- a/src/app/@modules/home/components/table-pacientes-home/table-pacientes-home.component.html
+++ b/src/app/@modules/home/components/table-pacientes-home/table-pacientes-home.component.html
@@ -1,5 +1,5 @@
 <app-card-content>
-  <h3 class="mb-0 mt-2 ps-1">Usuários recentes</h3>
+  <h3 class="mb-0 mt-2 ps-1">Consultas recentes</h3>
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -35,7 +35,6 @@
             <span class="bold">Ativo</span>
           </td>
         </tr>
-
       </tbody>
     </table>
   </div>
