--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -9,6 +9,7 @@
 @import "./buttons";
 @import "./table";
 @import "./form";
+@import "./animations";
 
 // stylelint-disable-next-line selector-max-universal
 * {
