--- a/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
+++ b/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
@@ -1,64 +1,125 @@
-<h2 mat-dialog-title>Install Angular</h2>
 <mat-dialog-content class="mat-typography">
-  <h3>Develop across all platforms</h3>
-  <p>Learn one way to build applications with Angular and reuse your code and abilities to build
-    apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
-
-  <h3>Speed &amp; Performance</h3>
-  <p>Achieve the maximum speed possible on the Web Platform today, and take it further, via Web
-    Workers and server-side rendering. Angular puts you in control over scalability. Meet huge
-    data requirements by building data models on RxJS, Immutable.js or another push-model.</p>
-
-  <h3>Incredible tooling</h3>
-  <p>Build features quickly with simple, declarative templates. Extend the template language with
-    your own components and use a wide array of existing components. Get immediate Angular-specific
-    help and feedback with nearly every IDE and editor. All this comes together so you can focus
-    on building amazing apps rather than trying to make the code work.</p>
-
-  <h3>Loved by millions</h3>
-  <p>From prototype through global deployment, Angular delivers the productivity and scalable
-    infrastructure that supports Google's largest applications.</p>
-
-  <h3>What is Angular?</h3>
-
-  <p>Angular is a platform that makes it easy to build applications with the web. Angular
-    combines declarative templates, dependency injection, end to end tooling, and integrated
-    best practices to solve development challenges. Angular empowers developers to build
-    applications that live on the web, mobile, or the desktop</p>
-
-  <h3>Architecture overview</h3>
-
-  <p>Angular is a platform and framework for building client applications in HTML and TypeScript.
-  Angular is itself written in TypeScript. It implements core and optional functionality as a
-  set of TypeScript libraries that you import into your apps.</p>
-
-  <p>The basic building blocks of an Angular application are NgModules, which provide a compilation
-  context for components. NgModules collect related code into functional sets; an Angular app is
-  defined by a set of NgModules. An app always has at least a root module that enables
-  bootstrapping, and typically has many more feature modules.</p>
-
-  <p>Components define views, which are sets of screen elements that Angular can choose among and
-  modify according to your program logic and data. Every app has at least a root component.</p>
-
-  <p>Components use services, which provide specific functionality not directly related to views.
-  Service providers can be injected into components as dependencies, making your code modular,
-  reusable, and efficient.</p>
-
-  <p>Both components and services are simply classes, with decorators that mark their type and
-  provide metadata that tells Angular how to use them.</p>
-
-  <p>The metadata for a component class associates it with a template that defines a view. A
-  template combines ordinary HTML with Angular directives and binding markup that allow Angular
-  to modify the HTML before rendering it for display.</p>
-
-  <p>The metadata for a service class provides the information Angular needs to make it available
-  to components through Dependency Injection (DI).</p>
-
-  <p>An app's components typically define many views, arranged hierarchically. Angular provides
-  the Router service to help you define navigation paths among views. The router provides
-  sophisticated in-browser navigational capabilities.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2 mat-dialog-title>Agendar Consulta</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h3 class="my-1">Selecione o médico</h3>
+        <hr class="my-2">
+      </div>
+      <div class="col-4">
+        <ng-select [items]="listaMedicos" bindLabel="nomeCompleto" bindValue="id" appearance="outline"
+          (change)="onSelectMedico($event)">
+          <!--formControlName="idMedico"-->
+        </ng-select>
+      </div>
+      <ng-container *ngIf="medicoSelecionado !== undefined">
+        <div class="col-12 mt-2 mb-4 animate__fadeInUp">
+          <mat-accordion>
+            <mat-expansion-panel hideToggle>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Dr. {{ medicoSelecionado?.nomeCompleto }}
+                </mat-panel-title>
+                <mat-panel-description>
+                  Escialidade: {{ medicoSelecionado?.especialidade }}
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <!-- <p>This is the primary content of the panel.</p> -->
+            </mat-expansion-panel>
+            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Visualizar Detalhes
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <p>I'm visible because I am open</p>
+            </mat-expansion-panel>
+          </mat-accordion>
+        </div>
+      </ng-container>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h3 class="my-1">Dados do paciente</h3>
+        <hr class="my-2">
+      </div>
+      <div class="col-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Nome</mat-label>
+          <input type="text" matInput placeholder="Digite seu nome" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
+              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+            </mat-error> -->
+        </mat-form-field>
+      </div>
+      <div class="col-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Sobrenome</mat-label>
+          <input type="text" matInput placeholder="Digite seu nome" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
+            <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+          </mat-error> -->
+        </mat-form-field>
+      </div>
+      <div class="col-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Sexo</mat-label>
+          <mat-select>
+            <!-- formControlName="username"-->
+            <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+          </mat-select>
+          <!-- <mat-error>
+              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+            </mat-error> -->
+        </mat-form-field>
+      </div>
+      <div class="col-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>CPF</mat-label>
+          <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" mask="000.000.000-00">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
+            <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+          </mat-error> -->
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h3 class="my-1">Dados da consulta</h3>
+        <hr class="my-2">
+      </div>
+      <div class="col-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Tipo de consulta</mat-label>
+          <mat-select>
+            <!-- formControlName="username"-->
+            <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+          </mat-select>
+          <!-- <mat-error>
+              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+            </mat-error> -->
+        </mat-form-field>
+      </div>
+      <div class="col-10">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Sintomas</mat-label>
+          <textarea matInput placeholder="Digite os sintomas do paciente aqui..."></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
+  <button mat-button mat-dialog-close>cancelar</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="testeRequestIntercptor()">salvar</button>
 </mat-dialog-actions>
+<!-- <app-sweetalert></app-sweetalert> -->
+
+<button (click)="abrir()">Abrir Toasty</button>
