--- a/src/main.scss
+++ b/src/main.scss
@@ -28,3 +28,6 @@
 
 // Theme customization
 @import "theme/theme";
+
+// Theme material ng-select style
+@import "~@ng-select/ng-select/themes/material.theme.css";
