--- a/src/theme/_form.scss
+++ b/src/theme/_form.scss
@@ -31,4 +31,12 @@
   .mat-form-field-infix {
     border-top: 0.5em solid transparent;
   }
+
+  .ng-select .ng-select-container.ng-appearance-outline {
+    min-height: 50px !important;
+  }
+
+  .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
+    padding-left: 1rem;
+  }
 }
