chore:(home): construindo gráficos quantitativos

--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <!--Cards left-->
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-5 col-sm-12">
         <div class="row">
           <div class="col-12">
             <app-card-content>
@@ -26,27 +26,8 @@
         </div>
       </div>
       <!-- Cards rigth-->
-      <div class="col-md-6 col-sm-12">
-        <div class="row">
-          <div class="col-md-4 col-sm-12 mt-sm-2 mt-md-0">
-            <app-card-content cardClass="border-radius-28">
-              <h1>CARD CONTENT</h1>
-            </app-card-content>
-          </div>
-          <div class="col-md-4 col-sm-12 my-sm-2 my-md-0">
-            <app-card-content cardClass="border-radius-28">
-              <h1>CARD CONTENT</h1>
-            </app-card-content>
-          </div>
-          <div class="col-md-4 col-sm-12 ">
-            <app-card-content cardClass="border-radius-28">
-              <h1>CARD CONTENT</h1>
-            </app-card-content>
-          </div>
-          <div class="col-12 mt-3">
-            <app-estatisticas-gerais></app-estatisticas-gerais>
-          </div>
-        </div>
+      <div class="col-md-7 col-sm-12">
+        <app-charts-estatisticas-medico></app-charts-estatisticas-medico>
       </div>
     </div>
   </div>
