--- a/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
+++ b/src/app/@modules/paciente/components/consulta-medica/consulta-medica.component.html
@@ -118,8 +118,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>cancelar</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="testeRequestIntercptor()">salvar</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial >salvar</button>
 </mat-dialog-actions>
 <!-- <app-sweetalert></app-sweetalert> -->
-
-<button (click)="abrir()">Abrir Toasty</button>
