--- a/src/app/@shared/card-content/card-content.component.html
+++ b/src/app/@shared/card-content/card-content.component.html
@@ -1,7 +1,10 @@
 <mat-card [ngClass]="cardClass">
   <mat-card-content>
-    <div class="card-content" >
+    <div class="card-content">
       <ng-content></ng-content>
     </div>
   </mat-card-content>
+  <div *ngIf="isCardFooter" [ngClass]="footerClass">
+    <ng-content select=".app-card-footer"></ng-content>
+  </div>
 </mat-card>
