--- a/src/theme/_buttons.scss
+++ b/src/theme/_buttons.scss
@@ -29,7 +29,7 @@
 }
 
 .btn-iniciar-consulta {
-  background-color: #C9F7F5;
-  color: #1BC5BD;
-  font-weight: 400;
+  background-color: #C9F7F5 !important;
+  color: #1BC5BD !important;
+  font-weight: 400 !important;
 }
