chore(home): criando visão clínica

--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -1,12 +1,10 @@
-<!-- <app-apex-chart chartID="support-chart-1" [chartConfig]="this.chart1"></app-apex-chart> -->
-
 <div class="row">
   <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
     <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary">
       <div class="card-body">
         <div class="row">
           <div class="col-sm-12">
-            <h1 class="m-0 title">100</h1>
+            <h1 class="m-0 title">222</h1>
             <span class="subtitle d-block">Total de Consultas</span>
             <p class="desc m-0">Quantitativo das consultas médicas</p>
           </div>
@@ -21,7 +19,7 @@
           </div>
           <div class="col">
             <h4 class="m-0 text-white">10</h4>
-            <span>Em andamento</span>
+            <span>Andamento</span>
           </div>
           <div class="col">
             <h4 class="m-0 text-white">10</h4>
@@ -63,7 +61,7 @@
       </div>
     </app-card-content>
   </div>
-  <div class="col-12 mt-3">
+  <!-- <div class="col-12 mt-3">
     <app-estatisticas-gerais></app-estatisticas-gerais>
-  </div>
+  </div> -->
 </div>
