--- a/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
+++ b/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <h3 class="mb-2">Estatísticas Gerais</h3>
+    <h3 class="mb-2 mt-0">Estatísticas Gerais</h3>
   </div>
 </div>
 <div class="row d-flex align-items-center my-1">
