--- a/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.scss
+++ b/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.scss
@@ -6,7 +6,7 @@
 
 .bg-icon-progress-second {
   background-color: #DDF9E4;
-  color: #22A447;
+  color: var(--tcc-bg-success-progress);
 }
 
 .bg-icon-progress-third {
