--- a/src/theme/_form.scss
+++ b/src/theme/_form.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .mat-form-field-appearance-outline .mat-form-field-outline {
     // background-color: transparent;
-    background-color: #fafafa;
+    // background-color: #fafafa;
     border-radius: 6px;
     color: var(--tcc-text-color-cinza);
     cursor: pointer;
@@ -9,11 +9,6 @@
 
   .mat-icon {
     color: var(--tcc-light);
-  }
-
-  .mat-raised-button  {
-    border-radius:20px !important;
-    padding: 10px 20px;
   }
 
   .mat-form-field-wrapper {
