--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -35,7 +35,8 @@
   --f_12: 12px;
   --f_14: 14px;
   --f_16: 16px;
-  --tcc-bg-success-progress: rgb(32, 157, 67);
+  --tcc-bg-success-progress: #2ed8b6;
   --tcc-bg-info-progress: #70A6E8;
   --tcc-bg-warning-progress: rgb(252, 174, 115);
+  --tcc-bg-warning-danger: rgb(255, 82, 82);
 }
