--- a/src/app/@modules/home/components/identificacao-profissional/identificacao-profissional.component.scss
+++ b/src/app/@modules/home/components/identificacao-profissional/identificacao-profissional.component.scss
@@ -1,6 +1,6 @@
 .bg-box-info {
-  max-height: 206px;
-  max-width: 320px;
+  min-height: 245px;
+  // max-width: 320px;
   // background-color: rgb(25, 123, 189);
   background: linear-gradient(#197BBD, #3391D0);
   border-radius: 26px;
