--- a/src/theme/_animations.scss
+++ b/src/theme/_animations.scss
@@ -57,3 +57,9 @@
   animation-name: fadeInUp;
   animation-duration: 500ms;
 }
+
+.animate__fadeInUp2 {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+  animation-duration: 800ms;
+}
