--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -1,22 +1,27 @@
 :root {
   --tcc-bg-menu: #f1f3f6;
   --tcc-bg-body: #fafafa;
-  --tcc-blue: #0d6efd;
+  --tcc-blue: #4099ff;
   --tcc-indigo: #6610f2;
   --tcc-purple: #6f42c1;
-  --tcc-pink: #d63384;
-  --tcc-red: #F64E60;
+  --tcc-pink: #e83e8c;
+  --tcc-red: #ff5370;
   --tcc-orange: #fd7e14;
-  --tcc-yellow: #ffc107;
-  --tcc-green: #198754;
+  --tcc-yellow: #ffb64d;
+  --tcc-green: #2ed8b6;
   --tcc-teal: #20c997;
-  --tcc-cyan: #0dcaf0;
+  --tcc-cyan: #00bcd4;
   --tcc-white: #fff;
   --tcc-gray: #6c757d;
   --tcc-gray-dark: #343a40;
-  --tcc-primary: #3699FF;
+  --tcc-primary: #4099ff;
   --tcc-secondary: #6c757d;
-  --tcc-success: #198754;
+  --tcc-success: #2ed8b6;
+  --info: #00bcd4;
+  --warning: #ffb64d;
+  --danger: #ff5370;
+  --light: #f8f9fa;
+  --dark: #343a40;
   --tcc-active: #1BC5BD;
   --tcc-active-menu: #197BBD;
   --tcc-inactive: #F64E60;
@@ -28,6 +33,11 @@
   --tcc-bg-th: #F3F6F9;
   --tcc-text-color-cinza: #B5B5C3;
   --tcc-text-color-title: #464E5F;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
   --tcc-font-sans-serif: 'Roboto', sans-serif;
   --tcc-font-lato: 'Lato', sans-serif;
   --tcc-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
