--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -4,10 +4,12 @@
       <i class="feather icon-calendar icon-add"></i>
     </div>
     <div class="col-12">
-      <h2 class="m-0 text-center">Nova consulta</h2>
+      <h2 class="m-0 text-center title">
+        <i class="feather icon-plus icon-add"></i>Consulta
+      </h2>
     </div>
     <div class="col-12 text-center pt-1 pb-2">
-      <span class="description-add">Adicionar novo Paciente</span>
+      <span class="description-add">Agendar nova consulta</span>
     </div>
     <div class="col-12 text-center">
        <button type="button" mat-raised-button color="primary"
