--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
@@ -1,9 +1,21 @@
+$f_38: 38px;
+$f_22: 22px;
+
 .icon-add {
   color: var(--tcc-bg-success-progress);
-  font-size: 38px;
+  font-size: $f_38;
 }
 
 .description-add {
   font-weight: 300;
   font-size: var(--f_14);
+}
+
+.title {
+  font-size: $f_22;
+}
+
+.icon-plus.icon-add {
+  font-size: $f_22;
+  font-weight: 800;
 }
