--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -42,7 +42,7 @@
       </div>
       <apx-chart [series]="chart2.series" [chart]="chart2.chart" [title]="chart2.title" [colors]="chart2.colors"></apx-chart>
       <div class="app-card-footer">
-        <div class="row py-3">
+        <div class="row py-3 m-0">
           <div class="row text-center text-white">
             <div class="col">
               <h4 class="m-0 text-white">10</h4>
@@ -61,7 +61,4 @@
       </div>
     </app-card-content>
   </div>
-  <!-- <div class="col-12 mt-3">
-    <app-estatisticas-gerais></app-estatisticas-gerais>
-  </div> -->
 </div>
